# SafetyVision

./: .dockerignore  .env.example  .gitignore  README.md  bootstrap.sh  build_analyze_event.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  sdk_publish.yml
agent/: graph.py  tools.py
analytics/: compare_forecasts.py  forecast.py  forecast_baseline.py  seed_supabase.py  seed_violations.py
core/: apikeys.py  detector.py  explainer.py  pdf_report.py  rag.py  supabase_db.py
docs/: api_usage.md  architecture.md  aws_deploy.md  decisions.md  experiments.md  model_card.md  supabase_setup.md
evaluation/: ab_test.py
evaluation/ab_results/: prompt_variant.json
evaluation/forecast_compare/: compare_NO-Safety_Vest.json  summary.json
evaluation/golden_set/: build_ground_truth.py  cases.json  cases.json.preexpertpath.bak  data.yaml  extract_yolo_labels.py  regulation_map.py  supplement_violations.py  unsplash_ground_truth.json
evaluation/golden_set/labels/: img_test_01.txt  img_test_02.txt  img_test_03.txt  img_test_04.txt  img_test_05.txt  img_test_06.txt  img_test_07.txt  img_test_08.txt  img_test_10.txt  img_test_11.txt  img_test_12.txt  img_test_13.txt  img_test_14.txt  img_test_15.txt  img_test_16.txt  img_test_17.txt  img_test_18.txt  img_test_19.txt
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/forecast/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: analyzing.tsx  feature-scroll.tsx  hero-detection.tsx  nav-shell.tsx  nav.tsx  reveal.tsx  risk-badge.tsx  theme-toggle.tsx  vest-icon.tsx
frontend/components/ui/: button.tsx
frontend/lib/: api.ts  keys.ts
frontend/lib/supabase/: middleware.ts  server.ts
infra/aws/: main.tf  outputs.tf  variables.tf
infra/supabase/migrations/: 0001_schema.sql  0004_api_keys.sql
infra/supabase/policies/: 0002_rls.sql  0003_storage.sql  0005_api_keys_rls.sql
mlruns/0/: meta.yaml
mlruns/175154394681775965/: meta.yaml
mlruns/175154394681775965/1af7f30ea44b4a8d99b3595bb2b3c6c2/: meta.yaml
mlruns/175154394681775965/4804f39f645140749a3fe317e547c0b4/: meta.yaml
mlruns/175154394681775965/82cd126fdb4a452bac9a3fa6647a46e1/: meta.yaml
mlruns/335284214022757588/: meta.yaml
mlruns/335284214022757588/8a07403ebb1240a78a171d92df79bc5c/: meta.yaml
mlruns/335284214022757588/93331b96d0844c05a7bd7c677349470a/: meta.yaml
mlruns/335284214022757588/b6353ab362134080a27bce4c519cf511/: meta.yaml
mlruns/513212334038582302/: meta.yaml
mlruns/513212334038582302/f1932e539038417dad6db757affd50e6/: meta.yaml
mlruns/621501274199551492/: meta.yaml
mlruns/621501274199551492/0af3bb3c50b84db3ac376d7e63e558d8/: meta.yaml
mlruns/621501274199551492/844334b615464444b3c4bfe9d5ee375b/: meta.yaml
model/: train_kaggle.ipynb  train_v2.py
model/datasets/: download.py  merge.py
model/yolov8n-ppe-v1/: cell7_eval_output.txt  results.csv
rag_data/: ingest.py  scrape_osha.py
rag_data/osha_corpus/: 1910_132.txt  1910_133.txt  1910_135.txt  1910_136.txt  1910_138.txt  1910_140.txt  1926_100.txt  1926_101.txt  1926_102.txt  1926_103.txt  1926_104.txt  1926_105.txt  1926_201.txt  1926_95.txt  1926_96.txt
scripts/: launch_training.sh
sdk/: README.md  pyproject.toml
sdk/safetyvision_client/: __init__.py  cli.py  client.py
sdk/tests/: test_client.py
serving/hf_app/: README.md  app.py  requirements.txt
serving/lambda/: Dockerfile  handler.py  requirements.txt
tests/: conftest.py  test_ab.py  test_agent_tools.py  test_detector.py  test_explainer.py  test_forecast.py  test_pdf_report.py  test_rag.py  test_smoke_e2e.py  test_smoke_real_model.py  test_violation.py
(+124 files in other folders)
