[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "safetyvision-client"
version = "0.1.0"
description = "Python client + CLI for the SafetyVision PPE compliance API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ayush Gupta" }]
keywords = ["ppe", "safety", "computer-vision", "osha", "compliance", "yolo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/ayushgupta07xx/SafetyVision"
"Model Card" = "https://huggingface.co/ayushgupta7777/safetyvision-yolov8"

[project.scripts]
safetyvision = "safetyvision_client.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["safetyvision_client*"]
